tests/negative/gold/byte-array-test.gold
tests/negative/byte-array-test.toit:6:14: warning: Byte-array element not in range 0-255
  bytes := #[-1, 256]
             ^~
tests/negative/byte-array-test.toit:6:18: warning: Byte-array element not in range 0-255
  bytes := #[-1, 256]
                 ^~~
tests/negative/byte-array-test.toit:8:11: warning: Byte-array element not in range 0-255
  print #[1024]
          ^~~~
tests/negative/byte-array-test.toit:11:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/byte-array-test.toit:7:14: error: Type mismatch. Expected 'int'. Got 'List'
  print #[1, [2, 3]]
             ^
tests/negative/byte-array-test.toit:10:11: error: Type mismatch. Expected 'int'. Got 'float'
  print #[f]
          ^
Compilation failed
